fix: overflow hidden

--- a/assets/css/games.css
+++ b/assets/css/games.css
@@ -54,6 +54,7 @@
     align-items: center;
     color: white;
     width:40%;
+    overflow: hidden;
 }
 
 .img-game{
