--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -31,6 +31,7 @@
     width: 40%;
     height: 100%;
     background-color: rgba(12, 245, 116, 1);
+    overflow: hidden;
     border-radius: 5%;
     font-size: 30px;
     font-weight: 600;
